--- a/src/App.scss
+++ b/src/App.scss
@@ -9,3 +9,40 @@ main {
   margin: 100px;
   padding: 0px;
 }
+
+/* Popup style */
+.popup-box {
+  position: fixed;
+  background: white;
+  width: 100%;
+  height: 100vh;
+  top: 124px;
+  left: 0;
+}
+
+.box {
+  position: relative;
+  width: 70%;
+  margin: 0 auto;
+  height: auto;
+  max-height: 70vh;
+  margin-top: calc(100vh - 85vh - 20px);
+  background: #fff;
+  border-radius: 4px;
+  padding: 20px;
+  border: 1px solid #999;
+  overflow: auto;
+}
+
+.close-icon {
+  cursor: pointer;
+  position: fixed;
+  right: calc(15% - 30px);
+  top: calc(100vh - 85vh - 33px);
+  background: #ededed;
+  line-height: 20px;
+  text-align: center;
+  border: 1px solid #999;
+  font-size: 16px;
+  padding: 5px;
+}
