--- a/src/App.scss
+++ b/src/App.scss
@@ -1,15 +1,3 @@
-.App {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-}
-
-main {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  margin: 100px;
-  padding: 0px;
-}
-
 /* Popup style */
 .popup-box {
   position: fixed;
@@ -45,4 +33,43 @@ main {
   border: 1px solid #999;
   font-size: 16px;
   padding: 5px;
+}
+
+main {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-gap: 1rem;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.BeersList {
+  display: flex;
+  flex-flow: column;
+  padding: 2rem;
+  border: 1px solid black;
+  border-radius: 10px;
+}
+
+.beer-cart-buttons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: black;
+  color: white;
+  padding: 0.5rem;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+}
+.add-remove-beer-buttons {
+  padding: 10px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.beerListCenter {
+  text-align: center;
 }
