space around the item number in beer cart styling

--- a/src/App.scss
+++ b/src/App.scss
@@ -69,6 +69,9 @@ main {
   justify-content: center;
   align-items: center;
 }
+.addBeerNumber {
+  padding: 10px;
+}
 
 .beerListCenter {
   text-align: center;
