--- a/src/App.scss
+++ b/src/App.scss
@@ -21,25 +21,62 @@ body {
 
 .popup-box {
   position: fixed;
-  background: white;
+  background: #f0d172;
   width: 100%;
-  height: 100vh;
-  top: 124px;
+  height: 100%;
+  top: 0;
   left: 0;
+  text-align: left;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 2fr;
 }
 
 .box {
-  position: relative;
-  width: 70%;
+  position: absolute;
   margin: 0 auto;
-  height: auto;
-  max-height: 70vh;
-  margin-top: calc(100vh - 85vh - 20px);
+  height: 40%;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  // margin-top: calc(100vh - 85vh - 20px);
   background: #fff;
-  border-radius: 4px;
-  padding: 20px;
-  border: 1px solid #999;
+  border-top-left-radius: 100px;
+  border-top-right-radius: 100px;
+  padding: 50px 100px;
   overflow: auto;
+  font-size: 20px;
+  h1 {
+    font-size: 35px;
+  }
+}
+.arrow {
+  cursor: pointer;
+  height: 65px;
+  transform: scaleX(-1);
+  margin-top: 75px;
+  float: left;
+  margin-left: 100px;
+}
+.cart {
+  height: 65px;
+  float: right;
+  margin-top: 75px;
+  justify-self: end;
+  margin-right: 100px;
+}
+
+.beerName {
+  color: white;
+  font-size: 60px;
+  float: left;
+  margin-left: 100px;
+}
+.category {
+  color: white;
+  font-size: 30px;
+  float: left;
+  margin-left: 100px;
 }
 
 .close-icon {
