--- a/src/App.scss
+++ b/src/App.scss
@@ -28,8 +28,23 @@ body {
   left: 0;
   text-align: left;
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 2fr;
+  grid-template-columns: 1fr 0.9fr;
+  grid-template-rows: 0.7fr 2fr;
+  .beerName {
+    color: white;
+    font-size: 60px;
+    float: left;
+    margin: 0;
+    margin-left: 100px;
+  }
+  .category {
+    color: white;
+    font-size: 30px;
+    float: left;
+    margin: 0;
+    margin-left: 100px;
+    line-height: 70px;
+  }
 }
 
 .box {
@@ -50,35 +65,57 @@ body {
     font-size: 35px;
   }
 }
+.boxes {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+.small-box {
+  height: 15vw;
+  width: 15vw;
+  margin: 5vw 0;
+  background-color: rgba(240, 209, 114, 0.17);
+  border-radius: 30px;
+  text-align: center;
+  display: grid;
+
+  p {
+    align-self: center;
+    color: #f6c83f;
+    font-size: 15px;
+    line-height: 35px;
+
+    span {
+      font-size: 40px;
+    }
+  }
+}
 .arrow {
   cursor: pointer;
-  height: 65px;
+  height: 50px;
   transform: scaleX(-1);
   margin-top: 75px;
   float: left;
   margin-left: 100px;
 }
 .cart {
-  height: 65px;
+  height: 50px;
   float: right;
   margin-top: 75px;
   justify-self: end;
   margin-right: 100px;
 }
-
-.beerName {
-  color: white;
-  font-size: 60px;
-  float: left;
-  margin-left: 100px;
+.beerTop {
+  display: flex;
+  flex-flow: column;
 }
-.category {
-  color: white;
-  font-size: 30px;
-  float: left;
-  margin-left: 100px;
+.popup-img {
+  grid-row: 2;
+  grid-column: 2;
+  height: 35vw;
+  border-radius: 40px;
+  z-index: 1;
+  justify-self: center;
 }
-
 .close-icon {
   cursor: pointer;
   position: fixed;
