--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,30 @@
+@use './home';
+@mixin btn($color, $background) {
+  color: $color;
+  background-color: $background;
+  border-radius: 57px;
+  padding: 10px 40px;
+  border: none;
+  text-decoration: none;
+  text-transform: capitalize;
+  font-weight: 500;
+  font-size: 1.2rem;
+  transition: all 0.3s ease-in-out;
+}
+a {
+  color: inherit;
+  background-color: none;
+  text-decoration: none;
+}
+
 /* Popup style */
 
 // Fonts
+@import url("https://fonts.googleapis.com/css2?family=Alef:wght@400;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;1,100;1,300;1,400&display=swap");
 $font-stack: "Roboto", sans-serif;
+$font-title-stack: "Alef", sans-serif;
+
 // Colors
 
 $header-background-color: #f6c83f;
@@ -112,4 +134,128 @@ main {
 
 .beerListCenter {
   text-align: center;
+}
+
+// Home page
+
+.Home {
+  width: 100%;
+  height: 100vh;
+  background-color: $primary-color;
+  font: 100% $font-title-stack;
+  display: grid;
+  grid-template-columns: 1fr 3fr 1fr;
+  justify-items: center;
+}
+.Home {
+  .home-btn {
+    @include btn($body-primary-color, $secondery-color);
+    text-transform: uppercase;
+    margin-top: 50px;
+    font-size: 1.4em;
+    margin-right: 20px;
+  }
+}
+.Home {
+  .home-btn:hover:hover {
+    color: $primary-color;
+    background-color: $header-background-color;
+    transform: scale(1.1);
+  }
+}
+
+.Home {
+  .logo {
+    height: auto;
+    width: 200px;
+  }
+}
+.Home {
+  h1 {
+    color: $third-color;
+    font-size: 2em;
+  }
+}
+
+.Home {
+  .home-wrapper {
+    display: grid;
+    grid-column: 2/3;
+    align-self: center;
+    justify-items: center;
+  }
+}
+.Home {
+  h1:nth-child(2) {
+    font-size: 3em;
+    margin-top: -20px;
+    margin-bottom: 10px;
+  }
+}
+
+// Header
+
+.Header {
+  width: 100%;
+  height: 100px;
+  background-color: $header-background-color;
+  color: $primary-color;
+  display: flex;
+  justify-content: space-between;
+}
+.Header {
+  * {
+    align-self: center;
+  }
+  h1 {
+    margin-left: 50px;
+  }
+  .CartNotifications {
+    margin-right: 50px;
+  }
+}
+
+// Router
+
+.App {
+  margin: 0;
+  padding: 0;
+  nav {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    background-color: $third-color;
+    // border-top: 1px $primary-color solid;
+    // padding: 10px;
+  }
+}
+.App {
+  nav {
+    ul {
+      display: flex;
+      width: 100%;
+      justify-content: space-around;
+      padding: 20px 0;
+      margin: 0;
+    }
+  }
+}
+.App {
+  nav {
+    li {
+      text-decoration: none;
+      list-style: none;
+      text-transform: uppercase;
+      font-weight: bold;
+    }
+  }
+}
+// CartNotifications
+
+.CartNotifications {
+  .logo-dark {
+    width: 60px;
+    height: auto;
+    align-self: flex-end;
+  }
 }
