--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,3 @@
-@use './home';
 @mixin btn($color, $background) {
   color: $color;
   background-color: $background;
@@ -338,5 +337,11 @@ body {
     width: 60px;
     height: auto;
     align-self: flex-end;
+  }
+  h1 {
+    position: absolute;
+    top: 15px;
+    color: $third-color;
+    right: 73px;
   }
 }
