--- a/src/_home.scss
+++ b/src/_home.scss
@@ -1,13 +1,64 @@
-@use '../App.scss';
+// Colors
+
+$header-background-color: #f6c83f;
+$primary-color: #202632;
+$secondery-color: #e5e5e5;
+$third-color: #faf0e3;
+$highlight-color: #e39c96;
+$body-primary-color: black;
+$body-secondary-color: white;
 
 .Home {
   width: 100%;
   height: 100vh;
-  background-color: App.$primary-color;
-  background-color: pink;
+  background-color: $primary-color;
+  font: 100% $font-title-stack;
+  display: grid;
+  grid-template-columns: 1fr 3fr 1fr;
+  justify-items: center;
 }
-.home {
-  button {
-    background-color: pink;
+.Home {
+  .home-btn {
+    @include btn($body-primary-color, $secondery-color);
+    text-transform: uppercase;
+    margin-top: 50px;
+    font-size: 1.4em;
+    margin-right: 20px;
+  }
+}
+.Home {
+  .home-btn:hover:hover {
+    color: $primary-color;
+    background-color: $header-background-color;
+    transform: scale(1.1);
+  }
+}
+
+.Home {
+  .logo {
+    height: auto;
+    width: 200px;
+  }
+}
+.Home {
+  h1 {
+    color: $third-color;
+    font-size: 2em;
+  }
+}
+
+.Home {
+  .home-wrapper {
+    display: grid;
+    grid-column: 2/3;
+    align-self: center;
+    justify-items: center;
+  }
+}
+.Home {
+  h1:nth-child(2) {
+    font-size: 3em;
+    margin-top: -20px;
+    margin-bottom: 10px;
   }
 }
