--- a/src/styles/_shop.scss
+++ b/src/styles/_shop.scss
@@ -4,11 +4,13 @@
   grid-gap: 1rem;
   padding-left: 15px;
   padding-right: 15px;
+  margin-bottom: 50px;
 }
 
 .BeersList {
   display: flex;
   flex-flow: column;
+
   // border: 1px solid black;
   // border-radius: 100px;
   // background-color: #c4c4c4;
