cart ordering site almost ready

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -12,7 +12,8 @@
   transition: all 0.3s ease-in-out;
 }
 // colors
-$header-background-color: #f6c83f;
+$header-background-color: #f0d172;
+$primary-color: #202632;
 $primary-color: #202632;
 $secondery-color: #e5e5e5;
 $third-color: #faf0e3;
