remove bin working

--- a/src/styles/_cart.scss
+++ b/src/styles/_cart.scss
@@ -69,6 +69,10 @@
   grid-row: 1;
   padding-left: 1px;
 }
+.binbtn {
+  border: none;
+  background-color: transparent;
+}
 .cart-add-remove-btn {
   grid-column: 4;
   grid-row: 1;
