--- a/src/styles/_shop.scss
+++ b/src/styles/_shop.scss
@@ -47,14 +47,15 @@
   flex-flow: row-reverse;
   border: none;
   border-radius: 22px;
-  background-color: rgba(196, 196, 196, 0.37);
 
   button {
     border: none;
     background-color: transparent;
     font-size: x-large;
+    cursor: pointer;
   }
   input {
+    cursor: pointer;
     border: none;
     background-color: transparent;
   }
@@ -69,6 +70,7 @@
   flex-direction: row;
   align-items: center;
   align-self: center;
+  color: black;
 }
 
 .beerListCenter {
