--- a/src/styles/_shop.scss
+++ b/src/styles/_shop.scss
@@ -1,3 +1,18 @@
+@mixin slideInAnimation {
+  @for $i from 1 to 8 {
+    &:nth-child(#{$i}) {
+      animation: slide-in 0.5s cubic-bezier(0.5, 0, 0.5, 1) #{$i * 0.1}s both;
+    }
+  }
+}
+
+@keyframes slide-in {
+  from {
+    transform: translateY(-0.7em) scale(0.5);
+    opacity: 0;
+  }
+}
+
 .beerCartWrapper {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
@@ -6,6 +21,10 @@
   padding-right: 15px;
   margin-bottom: 50px;
   margin-top: 50px;
+
+  article {
+    @include slideInAnimation;
+  }
 }
 
 .BeersList {
