--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -12,7 +12,7 @@
   transition: all 0.3s ease-in-out;
 }
 // colors
-$header-background-color: #f0d172;
+$header-background-color: #f7b71e;
 $primary-color: #202632;
 $primary-color: #202632;
 $secondery-color: #e5e5e5;
@@ -25,5 +25,7 @@ $body-secondary-color: white;
 
 @import url("https://fonts.googleapis.com/css2?family=Alef:wght@400;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;1,100;1,300;1,400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap");
 $font-stack: "Roboto", sans-serif;
 $font-title-stack: "Alef", sans-serif;
+$font-home-page-title-stack: "Amatic SC", cursive;
