--- a/src/styles/_form.scss
+++ b/src/styles/_form.scss
@@ -32,19 +32,19 @@ $border-properties: 10px, #262d3b, 0px;
 .formbox {
   position: absolute;
   margin: 0 auto;
-  height: 50%;
+  height: 60%;
   bottom: 0;
   left: 0;
   right: 0;
   // margin-top: calc(100vh - 85vh - 20px);
   background: #fff;
-  border-top-left-radius: 100px;
-  border-top-right-radius: 100px;
-  padding: 50px 100px;
+  border-top-left-radius: 10vw;
+  border-top-right-radius: 10vw;
+  padding: 2vw 5vw;
   overflow: auto;
   font-size: 20px;
   h1 {
-    font-size: 50px;
+    font-size: 5.5vw;
     text-align: left;
   }
 }
@@ -53,14 +53,16 @@ $border-properties: 10px, #262d3b, 0px;
   max-width: 400px;
   margin: auto;
 }
-
+.submit {
+  height: 5.5vw;
+}
 form {
   padding: 1rem 3rem;
 
   p {
     margin-block-start: -1em;
     margin-block-end: 0em;
-    font-size: 20px;
+    font-size: 2vw;
     margin-left: 14px;
     color: red;
   }
@@ -79,25 +81,29 @@ form {
     grid-area: 1/1;
   }
   .expirationDate {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin-bottom: 0;
+    // display: flex;
+    // flex-direction: row;
+    // justify-content: space-between;
+    // margin-bottom: 0;
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    grid-gap: 1vw;
 
     input {
-      width: 25vw;
+      // width: 20vw;
       margin-bottom: 0vw;
     }
 
     .small-div {
-      display: flex;
-      flex-direction: column;
+      // display: flex;
+      // flex-direction: column;
+      grid-column: 2;
     }
     .small-div1 {
-      display: flex;
-      flex-direction: column;
+      // display: flex;
+      // flex-direction: column;
       input {
-        width: 40vw;
+        // width: 30vw;
       }
     }
   }
@@ -108,7 +114,8 @@ form {
     background: #f4f4f4;
     margin-top: 0vw;
     @include border($border-properties...);
-    height: 60px;
+    height: 5.5vw;
+    font-size: 3vw;
   }
 
   label {
@@ -117,6 +124,7 @@ form {
     color: $input-text-color;
     transform-origin: 0 100%;
     transform: translate(10px, 0);
+    font-size: 3vw;
   }
 
   input[type="text"],
@@ -133,6 +141,7 @@ form {
     &:not(:placeholder-shown) + label {
       transform: translate(0, -130%) scale(0.95);
       transition: 0.2s;
+      font-size: 2vw;
     }
   }
 
@@ -145,9 +154,9 @@ form {
     background-color: #f0d172;
     border-color: transparent;
     color: white;
-    font-size: 30px;
+    font-size: 3.5vw;
     border-radius: 30px;
-    padding: calc(#{$input-padding}/ 2);
+    // padding: calc(#{$input-padding}/ 2);
     margin: 0 0 0 0;
     cursor: pointer;
 
@@ -157,6 +166,9 @@ form {
       color: #f0d172;
       transition: 0.2s;
     }
+  }
+  .continue {
+    font-size: 3.5vw;
   }
 }
 
@@ -174,7 +186,10 @@ form {
         margin-top: 2vw;
       }
       .expirationDate .small-div div input {
-        width: 11vw;
+        width: 30vw;
+      }
+      .expirationDate .small-div1 div input {
+        width: 30vw;
       }
     }
   }
@@ -186,7 +201,10 @@ form {
   .Form {
     form {
       .expirationDate .small-div div input {
-        width: 8vw;
+        // width: 8vw;
+      }
+      .expirationDate .small-div1 div input {
+        // width: 8vw;
       }
     }
   }
@@ -195,6 +213,10 @@ form {
 /*------------------------------MEDIAQUERY 900px-----------------------*/
 
 @media screen and (min-width: 900px) {
+  .formbox {
+    padding: 5vw 10vw;
+    height: 50%;
+  }
   .Form {
     form {
       input,
@@ -202,8 +224,26 @@ form {
         margin-top: 1vw;
       }
       .expirationDate .small-div div input {
-        width: 6vw;
+        width: auto;
+      }
+      .expirationDate .small-div1 div input {
+        width: auto;
       }
     }
+  }
+}
+
+/*------------------------------MEDIAQUERY IPHONE-----------------------*/
+@media screen and (max-width: 499px) {
+  .expirationDate .small-div input {
+    width: 20vw;
+  }
+  .expirationDate .small-div1 input {
+    width: 30vw;
+  }
+}
+@media screen and (max-width: 499px) {
+  .expirationDate .small-div1 input {
+    width: 25vw;
   }
 }
