--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -4,8 +4,8 @@
 
 .Header {
   width: 100%;
-  height: 100px;
-  background-color: $header-background-color;
+  height: auto;
+  // background-color: $header-background-color;
   color: $primary-color;
   display: flex;
   justify-content: space-between;
@@ -16,11 +16,40 @@
   }
   h1 {
     margin-left: 50px;
+    font-size: 4em;
   }
   .CartNotifications {
-    position: fixed;
+    position: absolute;
     right: 50px;
     top: 15px;
     cursor: pointer;
+  }
+}
+
+// CartNotifications
+
+.CartNotifications {
+  .logo-dark {
+    width: 120px;
+    height: 131px;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    align-self: flex-end;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    justify-items: end;
+    align-items: center;
+    flex-direction: column;
+  }
+  h1 {
+    margin-top: 60px;
+    color: $header-background-color;
+    align-self: flex-end;
+    text-align: center;
+    margin-right: 10px;
+    font-size: 3em;
+    width: 100%;
   }
 }
