--- a/src/styles/_message.scss
+++ b/src/styles/_message.scss
@@ -1,8 +1,4 @@
-@import "./styles/base";
-
-// Home page
-
-.Home {
+.Message {
   width: 100%;
   height: 100vh;
   background-color: $primary-color;
@@ -11,8 +7,8 @@
   grid-template-columns: 1fr 3fr 1fr;
   justify-items: center;
 }
-.Home {
-  .home-btn {
+.Message {
+  .message-btn {
     @include btn($body-primary-color, $secondery-color);
     text-transform: uppercase;
     margin-top: 50px;
@@ -20,39 +16,26 @@
     margin-right: 20px;
   }
 }
-.Home {
-  .home-btn:hover:hover {
+.Message {
+  .message-btn:hover:hover {
     color: $primary-color;
     background-color: $header-background-color;
     transform: scale(1.1);
   }
 }
 
-.Home {
-  .logo {
-    height: auto;
-    width: 150px;
-  }
-}
-.Home {
+.Message {
   h1 {
     color: $third-color;
     font-size: 2em;
   }
 }
 
-.Home {
-  .home-wrapper {
+.Message {
+  .message-wrapper {
     display: grid;
     grid-column: 2/3;
     align-self: center;
     justify-items: center;
-  }
-}
-.Home {
-  h1:nth-child(2) {
-    font-size: 3em;
-    margin-top: -20px;
-    margin-bottom: 10px;
   }
 }
