--- a/src/styles/_shop.scss
+++ b/src/styles/_shop.scss
@@ -22,9 +22,9 @@
   margin-bottom: 50px;
   margin-top: 50px;
 
-  article {
-    @include slideInAnimation;
-  }
+  // article {
+  //   @include slideInAnimation;
+  // }
 }
 
 .BeersList {
@@ -39,13 +39,15 @@
   border-radius: 22px;
   border: 1px solid transparent;
   object-fit: cover;
+  z-index: -100;
 }
 
-.ratingImg {
-  position: absolute;
-  margin-left: 88px;
-  margin-top: 5px;
-}
+// .ratingImg {
+//   position: relative;
+//   margin-left: 88px;
+//   margin-top: 5px;
+//   z-index: 0;
+// }
 .star-yellow {
   fill: #f6c83f;
 }
