--- a/src/App.scss
+++ b/src/App.scss
@@ -22,6 +22,7 @@ body {
 .popup-box {
   position: fixed;
   background: #f0d172;
+  z-index: 200;
   width: 100%;
   height: 100%;
   top: 0;
@@ -140,6 +141,16 @@ body {
     width: 100%;
     background-color: white;
     z-index: 100;
+  }
+  .navIcon {
+    fill: black;
+  }
+  .selected {
+    // fill: $header-background-color;
+
+    .navIcon {
+      fill: $header-background-color;
+    }
   }
 }
 .App {
