--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -6,7 +6,7 @@
   width: 100%;
   height: auto;
   // background-color: $header-background-color;
-  color: $primary-color;
+  // color: $primary-color;
   display: flex;
   justify-content: space-between;
 }
@@ -42,13 +42,18 @@
     justify-items: end;
     align-items: center;
     flex-direction: column;
+    fill: black;
+    z-index: 10;
   }
   h1 {
-    margin-top: 60px;
+    z-index: 100;
+    top: 0;
+    position: absolute;
+    margin-top: 50px;
     color: $header-background-color;
     align-self: flex-end;
     text-align: center;
-    margin-right: 10px;
+    right: 10px;
     font-size: 3em;
     width: 100%;
   }
