move img in popup

--- a/src/App.scss
+++ b/src/App.scss
@@ -21,7 +21,8 @@ body {
 
 .popup-box {
   position: fixed;
-  background: #f0d172;
+  background: $header-background-color;
+  background-image: linear-gradient($header-background-color 30%, black);
   z-index: 200;
   width: 100%;
   height: 100%;
@@ -51,7 +52,7 @@ body {
 .box {
   position: absolute;
   margin: 0 auto;
-  height: 40%;
+  height: 60%;
   bottom: 0;
   left: 0;
   right: 0;
@@ -74,14 +75,14 @@ body {
   height: 15vw;
   width: 15vw;
   margin: 5vw 0;
-  background-color: rgba(240, 209, 114, 0.17);
+  background-color: $background-opacity-color;
   border-radius: 30px;
   text-align: center;
   display: grid;
 
   p {
     align-self: center;
-    color: #f6c83f;
+    color: $header-background-color;
     font-size: 15px;
     line-height: 35px;
 
@@ -108,6 +109,7 @@ body {
 .beerTop {
   display: flex;
   flex-flow: column;
+  grid-row: 2;
 }
 .popup-img {
   grid-row: 2;
