--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -13,6 +13,7 @@
 }
 // colors
 $header-background-color: #f7b71e;
+$background-opacity-color: #fff5df;
 $primary-color: #202632;
 $primary-color: #202632;
 $secondery-color: #e5e5e5;
