--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -5,6 +5,8 @@
 .Home {
   width: 100%;
   height: 100vh;
+  min-height: 120%;
+
   background-color: $primary-color;
   font: 100% $font-home-page-title-stack;
   display: grid;
@@ -49,10 +51,6 @@
 
 .Home {
   .home-wrapper {
-    // display: grid;
-    // grid-column: 2/3;
-    // position: relative;
-    // clear: both;
     margin: 0 auto;
     width: 50vw;
     height: 50vw;
@@ -62,14 +60,9 @@
     padding: 70px;
   }
 }
-.Home {
-  // h1:nth-child(2) {
-  //   font-size: 3em;
-  //   margin-top: -20px;
-  //   margin-bottom: 10px;
-  // }
-}
-@media screen and (min-width: 1400px) {
+/* Large devices (laptops/desktops, 992px and up) */
+
+@media screen and (min-width: 992px) {
   .Home {
     .logo {
       height: auto;
@@ -95,5 +88,13 @@
       border-radius: 50%;
       padding: 40px;
     }
+  }
+}
+
+// Height breack point
+
+@media screen and (max-height: 600px) {
+  .Home {
+    height: 100%;
   }
 }
