--- a/src/styles/_message.scss
+++ b/src/styles/_message.scss
@@ -1,6 +1,7 @@
 .Message {
   width: 100%;
   height: 100vh;
+  min-height: 100%;
   background-color: $primary-color;
   font: 100% $font-title-stack;
   display: grid;
@@ -15,13 +16,14 @@
     font-size: 3em;
     font-weight: 400;
     padding: 20px 70px;
+    cursor: pointer;
   }
 }
 .Message {
   .Message-wrapper {
     h1 {
       color: $third-color;
-      font-size: 3rem;
+      font-size: 2rem;
       font-weight: 500;
     }
     .Message-title {
@@ -40,9 +42,9 @@
   }
 }
 .Message {
-  .message-btn:hover:hover {
-    color: $primary-color;
-    background-color: $header-background-color;
+  .finish-btn:hover {
+    color: $header-background-color;
+    background-color: white;
     transform: scale(1.1);
   }
 }
@@ -59,5 +61,120 @@
     grid-column: 2/3;
     align-self: center;
     justify-items: center;
+  }
+}
+// Large screens
+@media screen and (min-width: 992px) {
+  .Message {
+    .Message-wrapper {
+      h1 {
+        font-size: 4em;
+        margin: 0;
+        margin-top: 5vh;
+        margin-bottom: 10px;
+      }
+      .Message-title {
+        h1 {
+          font-size: 5vw;
+          font-weight: bold;
+        }
+      }
+      span {
+        font-size: 5rem;
+        font-weight: 500;
+        margin-bottom: 20px;
+      }
+    }
+  }
+  .Message {
+    h1 {
+      font-size: 5vw;
+    }
+  }
+  .Message {
+    height: 100vh;
+  }
+  .Message {
+    .finish-btn {
+      @include btn(white, $header-background-color);
+      font-size: 5em;
+      font-weight: 400;
+      padding: 20px 70px;
+      margin: 10px;
+    }
+  }
+}
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+  .Message {
+    .Message-wrapper {
+      h1 {
+        font-size: 1em;
+        margin: 0;
+        margin-top: 3vh;
+        margin-bottom: 10px;
+      }
+      .Message-title {
+        h1 {
+          font-size: 10vw;
+          font-weight: bold;
+        }
+      }
+      span {
+        font-size: 3rem;
+        font-weight: 500;
+        margin-bottom: 20px;
+      }
+    }
+  }
+  .Message {
+    h1 {
+      font-size: 5vw;
+    }
+  }
+  .Message {
+    height: 100vh;
+  }
+  .Message {
+    .finish-btn {
+      @include btn(white, $header-background-color);
+      font-size: 1em;
+      font-weight: 400;
+      padding: 15px 50px;
+      margin: 10px;
+    }
+  }
+}
+
+// Height breack point
+
+@media screen and (max-height: 500px) {
+  .Message {
+    height: 100%;
+    padding: 50px 0;
+  }
+  .Message-wrapper {
+    span {
+      font-size: 1rem;
+      font-weight: 500;
+      margin-bottom: 20px;
+    }
+  }
+  .Message-title {
+    h1 {
+      font-size: 2em;
+      margin: 0;
+      font-weight: bold;
+    }
+  }
+  .Message {
+    .finish-btn {
+      @include btn(white, $header-background-color);
+      font-size: 1.6em;
+      font-weight: 400;
+      padding: 15px 50px;
+      margin: 10px;
+    }
   }
 }
