--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -15,7 +15,9 @@
   }
   h1 {
     margin-left: 50px;
-    font-size: 4em;
+    font: 100% $font-home-page-title-stack;
+    font-size: 7em;
+    margin-top: 20px;
   }
   .CartNotifications {
     position: absolute;
@@ -49,6 +51,7 @@
     top: 0;
     position: absolute;
     margin-top: 50px;
+
     color: $header-background-color;
     align-self: flex-end;
     text-align: center;
