--- a/src/App.scss
+++ b/src/App.scss
@@ -114,10 +114,11 @@ body {
 .popup-img {
   grid-row: 2;
   grid-column: 2;
-  height: 35vw;
+  height: 20vw;
   border-radius: 40px;
   z-index: 1;
   justify-self: center;
+  margin-bottom: 85%;
 }
 .close-icon {
   cursor: pointer;
