--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -5,9 +5,6 @@
 .Header {
   width: 100%;
   height: auto;
-
-  display: flex;
-  justify-content: space-between;
 }
 .Header {
   * {
@@ -51,12 +48,14 @@
     top: 0;
     position: absolute;
     margin-top: 50px;
-
     color: $header-background-color;
     align-self: flex-end;
     text-align: center;
     right: 10px;
     font-size: 3em;
     width: 100%;
+  }
+  .notifications {
+    font-weight: bold;
   }
 }
