--- a/src/styles/_message.scss
+++ b/src/styles/_message.scss
@@ -63,15 +63,17 @@
     justify-items: center;
   }
 }
-// Large screens
-@media screen and (min-width: 992px) {
+
+/* Large devices (laptops/desktops, 992px and up) */
+
+@media screen and (min-width: 992px) and(max-height: 900px) {
   .Message {
     .Message-wrapper {
       h1 {
-        font-size: 4em;
+        font-size: 2em;
         margin: 0;
-        margin-top: 5vh;
-        margin-bottom: 10px;
+        margin-top: 4vh;
+        margin-bottom: 0px;
       }
       .Message-title {
         h1 {
@@ -97,9 +99,9 @@
   .Message {
     .finish-btn {
       @include btn(white, $header-background-color);
-      font-size: 5em;
+      font-size: 2.5em;
       font-weight: 400;
-      padding: 20px 70px;
+      padding: 10px 50px;
       margin: 10px;
     }
   }
