--- a/src/App.scss
+++ b/src/App.scss
@@ -38,6 +38,7 @@ body {
     float: left;
     margin: 0;
     margin-left: 100px;
+    margin-bottom: -10px;
   }
   .category {
     color: white;
@@ -46,6 +47,16 @@ body {
     margin: 0;
     margin-left: 100px;
     line-height: 70px;
+    margin-bottom: -10px;
+  }
+  .price {
+    color: white;
+    font-size: 30px;
+    float: left;
+    margin: 0;
+    margin-left: 100px;
+    line-height: 70px;
+    margin-bottom: -10px;
   }
 }
 
@@ -97,6 +108,7 @@ body {
   margin-top: 75px;
   float: left;
   margin-left: 100px;
+  margin-top: 30px;
 }
 .cart {
   height: 50px;
